--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -13,10 +13,12 @@
 }
 
 .chatContainer {
-  padding: 50px 0;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1080px;
+  margin: 0 auto;
 }
 @media all and (orientation=portrait){
   .chatContainer {
