--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -124,7 +124,6 @@
 }
  
 .mainInputField {
-  padding: 7px 25px;
   border-radius: 50px;
   background-color: #909B97;
   color: black;
@@ -134,13 +133,14 @@
 .userinputField {
   display: flex;
   align-items: center;
-  width: 40%;
+  width: 100%;
+  max-width: 600px;
   height: 70px;
   border-radius: 35px;
   padding: 15px;
   background-color: #313F46;
   box-shadow: none;
-  border: 2px solid #378588;
+  border: 2px solid #4D6F81;
 }
 
 
@@ -148,10 +148,9 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 260px;
-  border-radius: 50px;
+  /* height: 260px; */
+  border-radius: 30px;
   background-color: #909B97;
- 
   box-shadow: none;
 }
  
@@ -159,13 +158,11 @@
   width:"100%"
 }
  
-@media all and (max-width:575px){
-  .mainInputField{
-    padding: 14px 10px;
-  }
+@media all and (max-width:767px){
 
   .userinputField {
     width: 100%;
+    max-width: 90%;
     height: 56px;
   }
 }
