--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -13,16 +13,16 @@
 }
 
 .chatContainer {
-  padding: 50px;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1080px;
+  max-width: 1040px;
   margin: 0 auto;
 }
 @media all and (orientation=portrait){
   .chatContainer {
-    padding: 30px 0;
+    padding: 30px 0 0 0;
   }
 }
 
