Restyle feedback widget

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,26 @@ html {
 #root {
   height: 100%;
 }
+
+.feedback-container {
+  padding: 12px 30px !important;
+}
+
+.feedback-text {
+  font-size: 16px !important;
+  font-weight: 700px !important;
+}
+
+.feedback-button {
+  padding: 12px 20px !important;
+  font-weight: 700 !important;
+}
+
+.feedback-button:focus {
+  outline-offset: 4px !important;
+  outline: 4px solid #1b1b1b !important;
+}
+
+.confirmation-text {
+  font-size: 16px !important;
+}
