--- a/frontend/src/components/Feedback/Feedback.module.css
+++ b/frontend/src/components/Feedback/Feedback.module.css
@@ -1,12 +1,18 @@
 .mainContainer {
     overflow: hidden;
     width: 100%;
-    max-width: 1040px;
+    max-width: 460px;
     padding: 50px 0 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin: 0 auto;
     min-height: 100vh;
+}
+
+@media all and (orientation:portrait){
+    .mainContainer {
+        padding: 30px 0 20px 0;
+    }
+
 }
