--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  background-image: url('/assets/antarctic-background.jpg');
+  background-image: url('/assets/https://i.imgur.com/y6CLeQF.jpeg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
