--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -95,8 +95,16 @@ input.fileInput::file-selector-button {
 
 .errorText {
   position: absolute;
-  top: -30px;
+  top: -50px;
   z-index: 1;
+  background-color: #f4e3db;
+  border-left: 8px solid #d54309;
+  padding: 8px 14px;
+  font-size: 16px;
+  line-height: 24px;
+  width: 100%;
+  display: flex;
+  gap: 12px;
 }
 
 .textAreaOverrides {
