--- a/tests/integration_tests/dotenv_templates/dotenv.jinja2
+++ b/tests/integration_tests/dotenv_templates/dotenv.jinja2
@@ -9,7 +9,7 @@ AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
 AZURE_OPENAI_PREVIEW_API_VERSION=2024-05-01-preview
 AZURE_OPENAI_STREAM={{ AZURE_OPENAI_STREAM }}
-{% if USE_AOAI_EMBEDDINGS AND AZURE_OPENAI_EMBEDDING_NAME %}
+{% if USE_AOAI_EMBEDDINGS and AZURE_OPENAI_EMBEDDING_NAME %}
 AZURE_OPENAI_EMBEDDING_NAME={{ AZURE_OPENAI_EMBEDDING_NAME }}
 {% endif %}
 {% if USE_AOAI_EMBEDDINGS %}
@@ -45,7 +45,7 @@ ELASTICSEARCH_FILENAME_COLUMN=
 ELASTICSEARCH_TITLE_COLUMN=
 ELASTICSEARCH_URL_COLUMN=
 ELASTICSEARCH_VECTOR_COLUMNS=text_embedding.predicted_value
-{% if USE_ELASTICSEARCH_EMBEDDINGS AND ELASTICSEARCH_EMBEDDING_MODEL_ID %}
+{% if USE_ELASTICSEARCH_EMBEDDINGS and ELASTICSEARCH_EMBEDDING_MODEL_ID %}
 ELASTICSEARCH_EMBEDDING_MODEL_ID={{ ELASTICSEARCH_EMBEDDING_MODEL_ID }}
 {% endif %}
 {% elif DATASOURCE_TYPE == "AZURE_COSMOS_DB" %}
