--- a/frontend/src/components/PdfModal/PdfModal.module.css
+++ b/frontend/src/components/PdfModal/PdfModal.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .close {
@@ -14,6 +14,9 @@
 .title {
   font-size: 20px;
   font-weight: 600;
+  max-width: 95%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .body {
