--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -273,7 +273,7 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
-  color: #000000;
+  color: #ffffff;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -295,7 +295,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  color: #323130;
+  color: #3bcbff;
   margin-top: 12px;
   margin-bottom: 12px;
 }
@@ -310,7 +310,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #000000;
+  color: #ffffff;
   flex: none;
   order: 1;
   align-self: stretch;
