--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -74,7 +74,7 @@
     font-size: 12px;
     line-height: 16px;
 
-    color: #115EA3;
+    /* color: #115EA3; */
     display: flex;
     flex-direction: row;
     align-items: center;
